[tool.poetry]
name = "xray-vless-bot"
version = "0.1.0"
description = ""
authors = ["pheezz <jagubkoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
loguru = "^0.7.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
apscheduler = "^3.10.4"
emoji-country-flag = "^1.3.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
